Final Test add img

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dự đoán kết quả sổ xố</title>
     <link rel="stylesheet" href="luckynumber.css">
 </head>
 
@@ -36,8 +36,11 @@
 
     <div class="">
         <button id="myBtn">
-            Open Modal
+            Click to go to Lucky Number Modal 
         </button>
+    </div>
+    <div class="img">
+        <img src="https://kenh14cdn.com/thumb_w/660/203336854389633024/2021/5/30/nu-ca-si-khien-tran-thanh-muon-1535401142854375162735583237437381402151161n-1614510084-879-width524height600-16223481197401040415186.jpeg" alt="">
     </div>
     <div class="">
         <button id="myBtnPs">
