--- a/ProblemSolving.html
+++ b/ProblemSolving.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Problem Solving</title>
     <style>
         h1{
             text-align: center;
-            margin-left: 1%;
-            margin-right: 5%;
+        }
+        img {
+            border-radius: 50%;
+            width: 30%;
+            margin: 5% 33%;
         }
     </style>
 </head>
@@ -18,6 +21,8 @@
 <h1>
     Welcome to Problem Solving Page
 </h1>
+
+<img src="https://media.phunutoday.vn/files/content/2021/03/08/hien-ho-bikini-1-0904.jpg" alt="" srcset="">
 
     <script src="ProblemSolving.js"></script>
 </body>
