Final Test add img mobile more

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="">
         <button id="myBtnPs">
-            <a href="ProblemSolving.html">
+            <a href="ProblemSolving.html" target="_blank">
                 Click to go to Problem Solving Page
             </a>
         </button>
