--- a/ProblemSolving.html
+++ b/ProblemSolving.html
@@ -11,8 +11,23 @@
         }
         img {
             border-radius: 50%;
-            width: 30%;
+            width: 50%;
+            height: 50vh;
             margin: 5% 33%;
+        }
+        @media only screen and (min-width: 768px) {
+            img {
+            width: 60%;
+            height: 60vh;
+            margin: 5% 20%;
+            }
+        }
+        @media only screen and (max-width: 600px) {
+            img {
+            width: 70%;
+            height: 70vh;
+            margin: 5% 15%;
+            }
         }
     </style>
 </head>
